    m68k.
  * Add all/local-pt_BR.diff (fix a small typo in the Brazilian Portuguese
    translation) by Guilherme de S. Pastore.  (Closes: #319422)
  * Add hurd-i386/local-mlock.diff (fix mlock on Hurd/Mach), by Samuel
    Thibault.  (Closes: #349204)
  * sysdeps/i386.mk: build glibc with --with-__thread on i386.
  * debian/local/manpages: s/woody/etch/g.  (Closes: #364198)

  [ Denis Barbier ]
  * Preserve hard links when compiling the locales-all package, this reduces
    package size by a factor of 3.  Thanks to Jeroen van Wolffelaar for noticing.
  * Let locales-all Provides: locales instead of a virtual generated-locales
    package.  This is requested by Jeroen van Wolffelaar to allow this new
    package enter unstable.  Packages which Build-Depends on locales are
    likely to FTBFS if locales-all is installed, this dependency will be
    fixed in a later release.
  * Fix location of locales/NEWS.Debian.  Thanks Matthijs Mohlmann.
    (Closes: #362763)
  * locales.postinst: Do not abort if the current locale is not generated.
  * locales.config: Fix shell scripting when "All locales" is selected along
    with other choices,  Thanks Olivier Trichet.  (Closes: #364251)
  * update-locale: When checking for invalid locale settings, do not mess up
    with current environment settings.

  [ Michael Banck ]
  * Add hurd-i386/cvs-posix-opts.diff (Define many missing options, most
    notably _POSIX_THREAD_SAFE_FUNCTIONS) by Roland McGrath (patch from 
    HEAD).

 -- Aurelien Jarno <aurel32@debian.org>  Fri, 14 Apr 2006 20:28:41 +0200

glibc (2.3.6-7) unstable; urgency=medium

  [ Aurelien Jarno ]
  * Urgency set to medium because this version fixes and RC bug in testing.
  * Optimized libraries should actually be cross-compiled as we don't know the
    CPU that will be used.
  * Allow the glibc to be cross-compiled for Linux and kFreeBSD.  (Closes:
    #358771)
  * Bumped the minimum kernel to 2.4.1 instead of 2.4.0 as there are some