@@ -9,6 +9,8 @@ glibc (2.3.6-8) UNRELEASED; urgency=low
     Thibault.  (Closes: #349204)
   * sysdeps/i386.mk: build glibc with --with-__thread on i386.
   * debian/local/manpages: s/woody/etch/g.  (Closes: #364198)
+  * sysdeps/depflags.pl: bumped the versioned conflicts with initrd-tools 
+    to 0.1.84.1, as older version use LD_ASSUME_KERNEL=2.4.  (Closes: #365647)
 
   [ Denis Barbier ]
   * Preserve hard links when compiling the locales-all package, this reduces
